\name{NEWS}
\title{OrgMassSpecR News}

\section{Changes in version 0.3-2 (2011-04-08)}{

  \itemize{
  
    \item Warning message in ListFormula modified to include the
    elemental formula (helps in tracking down the source of the warning
    when called multiple times within another function).

  }

}
  

\section{Changes in version 0.3-1 (2011-03-18)}{

  \itemize{

    \item NEWS file started.

  }
  
}