@@ -1,8 +1,8 @@
 Package: OrgMassSpecR
 Type: Package
 Title: Organic Mass Spectrometry
-Version: 0.3-5
-Date: 2011-08-08
+Version: 0.3-6
+Date: 2011-08-26
 Author: Nathan G. Dodder. Code contributions from Katharine M. Mullen.
 Maintainer: Nathan Dodder <nathand@sccwrp.org>
 Depends: R (>= 2.13.0)
