@@ -1,4 +1,5 @@
-export(ConvertPeptide, 
+export(ConvertConcentration,
+       ConvertPeptide, 
        DeadVolume,
        Digest,
        DrawChromatogram,
